Task List & task Add features implemented

--- a/tasks.json
+++ b/tasks.json
@@ -4,5 +4,11 @@
     "description": "Drink a Coffee",
     "completed": false,
     "inProgress": false
+  },
+  {
+    "id": 2,
+    "description": "Read Book",
+    "completed": false,
+    "inProgress": false
   }
 ]
