--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "nstlgy",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@clack/prompts": "^0.7.0"
+  }
 }
