feat: add task - deleting, updating, listing, help

--- a/tasks.json
+++ b/tasks.json
@@ -6,8 +6,8 @@
     "inProgress": false
   },
   {
-    "id": 2,
-    "description": "HELLO THERE",
+    "id": 3,
+    "description": "clean room",
     "completed": false,
     "inProgress": false
   }
